--- a/themes/dimension/layouts/partials/header.html
+++ b/themes/dimension/layouts/partials/header.html
@@ -15,5 +15,5 @@
 		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
 	</head>
 	<!-- Scripts -->
-			<script src="/js/jquery.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<body>
