--- a/docs/css/project.css
+++ b/docs/css/project.css
@@ -1,5 +1,5 @@
 #header nav ul li {
-    width: 135px;
+    width: 180px;
 }
 
 #header nav ul li a {
@@ -12,4 +12,17 @@ a.icon {
 
 article#contact table thead {
     display: none;
+}
+
+a.img {
+	float: right;
+	border-bottom: none;
+}
+
+a.img.img-left {
+	float: left;
+}
+
+div.clear {
+	clear: both;
 }
