--- a/static/css/project.css
+++ b/static/css/project.css
@@ -1,5 +1,8 @@
+html {
+	font-size: 16px;
+}
 #header nav ul li {
-    width: 180px;
+    width: 160px;
 }
 
 #header nav ul li a {
@@ -16,6 +19,7 @@ article#contact table thead {
 
 a.img {
 	float: right;
+	clear: right;
 	border-bottom: none;
 }
 
