--- a/docs/css/project.css
+++ b/docs/css/project.css
@@ -1,5 +1,8 @@
+html {
+	font-size: 16px;
+}
 #header nav ul li {
-    width: 180px;
+    width: 160px;
 }
 
 #header nav ul li a {
@@ -16,11 +19,18 @@ article#contact table thead {
 
 a.img {
 	float: right;
+	clear: right;
 	border-bottom: none;
+	margin-left: 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-right: 0;
 }
 
 a.img.img-left {
 	float: left;
+	margin-left: 0;
+	margin-right: 5px;
 }
 
 div.clear {
