--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -996,7 +996,7 @@ button {
       padding: 2.5rem 1rem; }
     #header .content p {
       line-height: 1.875; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 980px) {
     #header {
       padding: 1.5rem 0; }
       #header .content .inner {
@@ -1020,6 +1020,11 @@ button {
             width: 100%; }
       #header nav.use-middle:after {
         display: none; } }
+	
+@media screen and (max-width: 980px) {
+	#header nav ul {
+	}
+}
 
 /* Main */
 #main {
